Changelog
=========


1.7.4 (unreleased)
------------------

- Require ftw.upgrade >= 1.4.0 required by upgrade 1514.
  [jone]


1.7.3 (2013-11-04)
------------------

- Customize getIcon method. Search MimetypeRegistry before using iconmaps.
  [tschanzt]


1.7.2 (2013-10-16)
------------------

- Add French translations.
  [tschanzt]


1.7.1 (2013-07-19)
------------------

- Fix regression in download redirect with unicode filenames.
  [jone]


1.7.0 (2013-07-18)
------------------

- Drop Plone 4.1 support.
  [jone]

- File download: redirect to URL containing filename.
  This allows us to easily track downloads in statistics tools.
  [jone]

- Redirect users without any modifying permissions (without editable border)
  to the download when not hitting a specific view.
  Also add File back to allowAnonymousViewAbout for making sure that /view
  is added in the navigation.
  [jone]


1.6.4 (2013-06-04)
------------------

- Fix Upgradestep.
  [tschanzt]


1.6.3 (2013-05-31)
------------------

- Add additional Schemata for removal since it was renamed.
  [tschanzt]

- Add permission to edit advanced fields.
  [tschanzt]


1.6.2 (2013-05-17)
------------------

- Hide author in file view if anonymous and allowAnonymousViewAbout is False.
  [Julian Infanger]


1.6.1 (2013-04-17)
------------------

- Lawgiver support: map permissions.
  [jone]


1.6 (2013-01-21)
----------------

- Drop Plone 4.0 support.
  [jone]

- Hide view action for file.
  [Julian Infanger]


1.5 (2012-10-16)
----------------

- Add missing dependency in setup.py
  [tschanzt]

- use new document_date instead of effectiveDate.
  [tschanzt]


1.4.12 (2012-05-09)
-------------------

- Show time too on contenthostory viewlet.
  [mathias.leimgruber]


1.4.11 (2012-05-01)
-------------------

- Readded i18n:translate for content history viewlet action.
  [mathias.leimgruber]


1.4.10 (2012-04-30)
-------------------

- Fixed filename in response header for download.
  [Julian Infanger]

