@@ -8,6 +8,9 @@ Changelog
 - Require ftw.upgrade >= 1.4.0 required by upgrade 1514.
   [jone]
 
+- Add upgradestep to recalculate wrong contenttypes.
+  [tschanzt]
+
 
 1.7.3 (2013-11-04)
 ------------------
